# wallet-project

./: pyproject.toml
core/: settings.py
