[tool.poetry]
name = "wallet-project"
version = "0.1.0"
description = ""
authors = ["mikhael <sur.mikhael@gmail.com>"]
readme = "README.md"
packages = [{include = "wallet_project"}]

[tool.poetry.dependencies]
python = "3.8.18"


[tool.poetry.group.dev.dependencies]
django = "3.2"
djangorestframework = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

